@@ -1,5 +1,12 @@
 2007-08-24  Øyvind Kolås  <pippin@gimp.org>
 
+	* app/display/gimpdisplayshell-render.c: (compute_sample): removed
+	a temporary variable, simplified logic slightly.
+	(render_image_tile_fault, render_image_tile_fault_one_row): moved
+	sum computation out of loop.
+
+2007-08-24  Øyvind Kolås  <pippin@gimp.org>
+
 	* app/display/gimpdisplayshell-render.c: Replaced signed integres with
 	unsigned ones for weights etc to gain some additional bits of
 	precision. Enabled anti-aliasing for zoomlevels between 100% and 200%
